feat: Google maps error handling

--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
   <script src="js/viewModel.js"></script>
   <!-- Google maps api call, with callback to googMap to create the map instance and
   markers.  -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALhvpFcZhE5V5z3EY4eZAzx4s3LVbQSH8&callback=googMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALhvpFcZhE5V5z3EY4eZAzx4s3LVbQSH8&callback=googMap" onerror="googOops()" async defer></script>
 </html>
